Oppgrader til java 25